fix java 20 deprecation of `new URL(String)`